# Prep-Tesla-ASMA

./: README.md  pyproject.toml
data/: model_parts.json  model_parts_actions.json  speech_transcripts.json
data/processed/: body_panels_procedures_augmented.json  body_panels_procedures_merged.json
data/raw/: augmentations.json  body_panels_procedures.json
logs/errors/: 2026-01-10T17-34-48Z_45789ba9-01d9-4670-ac2c-0f5baafb6e4f.json
logs/normal/: 2026-01-09T11-54-52Z_fc889a4a-a72d-4e62-81a5-1157895b5533.json
logs/procedure_retrieval/normal/: 2026-01-10T17-52-32Z_bf2fb3e0-1d38-4990-afc5-9e5aedb5a6c9.json  2026-01-11T12-11-11Z_9acf795a-5cf5-4524-ab10-2e40912be33b.json
logs/step_assistant/saves/: GUID-3854CC14-6DD1-4CFE-A639-A8464023F1C7.json
scripts/: assistant.py  augment_with_summaries.py  augmenting_and_preprocessing.py  crawler.py  create_hierarchies.py  create_part_hierarchies.py  embed_user_prompt.py  embed_user_prompt_basic.py  input_to_procedure.py  merge_and_process_data.py  scraper.py  tesla_complete_procedures.json  tesla_model_y_body_procedures.json  text-to-speech.py  text_to_speech.py  user_input_handler.py  utils.py
